Fix flickering on larger screens when paginating youtube videos

--- a/src/index.css
+++ b/src/index.css
@@ -21,6 +21,11 @@
 
   .youtube-cards-wrapper {
     @apply flex flex-col items-center;
-    min-height: 38rem;
+  }
+
+  @media (min-width: 1280px) {
+    .youtube-cards-wrapper {
+      height: 42rem;
+    }
   }
 }
